--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "15.0.0-canary.183",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.7",
+    "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-2d16326d-20240930",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
     "sanity": "^3.62.2",
