--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "next": "$next"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.62.2",
+    "@sentry/nextjs": "^8.35.0",
     "@tailwindcss/typography": "^0.5.15",
     "@uiw/react-md-editor": "^4.0.4",
     "class-variance-authority": "^0.7.0",
@@ -37,7 +37,6 @@
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-2d16326d-20240930",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
-    "react-toastify": "^10.0.6",
     "sanity": "^3.62.2",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
